--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ __pycache__/
 *.pyc
 test.py
 .streamlit/secrets.toml
-/models
+/models/fine_tuned/roberta_sentiment_final
+/models/fine_tuned/roberta_semantic_final
